infrastructure/apps/powerdns/pdns-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: powerdns
  name: pdns
  namespace: powerdns
spec:
  ingressClassName: nginx
  rules:
    - host: pdns.uk.cloudnative.coop
      http:
        paths:
          - backend:
              service:
                name: auth
                port:
                  number: 8081
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - pdns.ii.nz
