infrastructure/apps/powerdns/powerdns-admin.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: powerdns
spec:
  type: ClusterIP
  # loadBalancerIP: 192.168.1.155
  ports:
    - name: "powerdns-admin"
      port: 80
      targetPort: 80
  selector:
    powerdns: admin
# status:
#   loadBalancer: {}
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: powerdns-admin-data
#   labels:
#     powerdns: admin
# spec:
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 100Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: powerdns
spec:
  replicas: 1
  selector:
    matchLabels:
      powerdns: admin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        powerdns: admin
    spec:
      restartPolicy: Always
      containers:
        - env:
            - name: SECRET_KEY
              valueFrom:
                secretKeyRef:
                  name: powerdns
                  key: api_key
            - name: SQLALCHEMY_DATABASE_URI
              value: sqlite:////data/powerdns-admin.db
            - name: PDNS_ADMIN_USER
              valueFrom:
                secretKeyRef:
                  name: powerdns
                  key: admin_user
            - name: PDNS_ADMIN_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: powerdns
                  key: admin_password
            - name: PDNS_ADMIN_EMAIL
              value: hh@ii.coop
            - name: PDNS_VERSION
              value: 4.7.3
            - name: PDNS_URL
              value: http://auth:8081
            - name: PDNS_SITE_NAME
              value: powerdns.ii.nz Administration
            - name: PDNS_ZONES
              value: |-
                ii.nz
                fop.nz
          image: powerdnsadmin/pda-legacy:v0.3.0
          name: admin
          ports:
            - containerPort: 80
          # https://github.com/PowerDNS-Admin/PowerDNS-Admin#option-2-using-docker-compose (port 9191 or 80?)
          livenessProbe:
            exec:
              command: ["/bin/sh", "-c", "nc -vz 127.0.0.1 80 2>/dev/null"]
            initialDelaySeconds: 80
          volumeMounts:
            - mountPath: /data
              name: powerdns-admin
            - mountPath: /config
              name: powerdns-config
          resources: {}
          # FIXME: Better approach to dns-poststart
          lifecycle:
            postStart:
              exec:
                command:
                  - "sh"
                  - "-c"
                  - "cd /app && cp /config/pdns-poststart.py . && /usr/bin/python3 pdns-poststart.py"
      volumes:
        - name: powerdns-admin
          persistentVolumeClaim:
            claimName: powerdns-admin
        - name: powerdns-config
          configMap:
            name: powerdns-admin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: powerdns
  namespace: powerdns
  # annotations:
  #   cert-manager.io/cluster-issuer: letsencrypt-pdns
  #   # kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "powerdns.uk.cloudnative.coop"
  rules:
    - host: "powerdns.uk.cloudnative.coop"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: admin
                port:
                  number: 80
